<resources>
    <string name="app_name">Plataforma AMS</string>
    <string name="item1">Olvide la contraseña</string>
    <string name="item2">Algo más</string>
    <string name="Firma">\nEnviado desde A+S App</string>
    <string name="titulo">Registro</string>

    <string-array name="months">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>
    <string-array name="delegations">
        <item>Delegación</item>
        <item>Ameca</item>
        <item>Atotonilco</item>
        <item>Autlán</item>
        <item>Capilla de Guadalupe</item>
        <item>Cd. Guzmán</item>
        <item>Chapala</item>
        <item>Cihuatlán</item>
        <item>El Grullo</item>
        <item>Estatal</item>
        <item>Encarnación de Díaz</item>
        <item>Guadalajara</item>
        <item>Jalostotitlán</item>
        <item>Jesús María</item>
        <item>Lagos de Moreno</item>
        <item>Ocotlán</item>
        <item>Pegueros</item>
        <item>Puerto Vallarta</item>
        <item>San José de Gracia</item>
        <item>San Juan de los Lagos</item>
        <item>Sayula</item>
        <item>Teocaltiche</item>
        <item>Tepatitlán</item>
        <item>Tequila</item>
        <item>Tomatlán</item>
        <item>Valle de Guadalupe</item>
        <item>Villa Hidalgo</item>
        <item>Yahualica</item>
        <item>Zapotlanejo</item>
        <item>Estatal</item>
    </string-array>

    <string-array name="tipos">
        <item>Tipo de servicio</item>
        <item>Choque</item>
        <item>Baleado</item>
        <item>Atropellado</item>
        <item>Infarto</item>
    </string-array>

    <string-array name="services">
        <item>Servicio Solicitado Por:</item>
        <item>C-5 - 911</item>
        <item>Ejercito</item>
        <item>Marina</item>
        <item>Guardia Nal.</item>
        <item>Particular</item>
        <item>Policia</item>
        <item>Protección Civil</item>
    </string-array>

    <string-array name="Autoridadpub">
        <item>Autoridad publica presente</item>
        <item>C-5 - 911</item>
        <item>Ejercito</item>
        <item>Marina</item>
        <item>Guardia Nal.</item>
        <item>Particular</item>
        <item>Policia</item>
        <item>Protección Civil</item>
    </string-array>

    <string-array name="tipo_paciente">
        <item>Tipo de Paciente</item>
        <item>Tipo 1</item>
        <item>Tipo 2</item>
        <item>Tipo 3</item>
    </string-array>

    <string-array name="Hospital_Traslado">
        <item>Hospital de Traslado</item>
        <item>CMNO IMSS</item>
        <item>HR Dr. V. Gomez F ISSSTE</item>
        <item>HGR 46 IMSS</item>
        <item>HGR 45 IMSS</item>
        <item>HGR 180 IMSS</item>
        <item>HGR 110 IMSS</item>
        <item>HGZ 89 IMSS</item>
        <item>HGZ 14 IMSS</item>
        <item> UMF 93 IMSS</item>
        <item>Otro</item>
    </string-array>

    <string-array name="autoridades_crm">

        <item>Autoridad CRM informadas</item>
        <item>Presidente</item>
        <item>Administrador</item>
        <item>Coord. Local de Socorros</item>
        <item>Jefe de Guardia</item>
        <item>Coord. Estatal de Socorros</item>
        <item>Punto Focal AMS</item>


    </string-array>

    <string-array name="num_y_del">
        <item>Delegación</item>
        <item>14001 Ameca</item>
        <item>14003 Atotonilco</item>
        <item>14004 Autlán</item>
        <item>14006 Capilla de Gpe.</item>
        <item>14007 Chapala</item>
        <item>14008 Ciuda Guzmán</item>
        <item>14010 El grullo</item>
        <item>14011 Encarnación de Díaz</item>
        <item>14013 Guadalajara</item>
        <item>14014 Jalostotitlan</item>
        <item>14015 Jesús María</item>
        <item>14017 Lagos de Moreno</item>
        <item>14019 Ocotlán</item>
        <item>14020 Pegueros</item>
        <item>14023 Puerto Vallarta</item>
        <item>14037 San Ignacio C. G</item>
        <item>14036 San José de G.</item>
        <item>14024 San Juan de los L.</item>
        <item>14025 Sayula</item>
        <item>14028 Tepatitlán</item>
        <item>14029 Tequila</item>
        <item>14030 Tomatlán</item>
        <item>14032 Valle de Gpe.</item>
        <item>14035 Villa Hgo.</item>
        <item>14033 Yahualica</item>
        <item>14034 Zapotlanejo</item>
        <item>##### Teocaltiche</item>
        <item>14000 Estatal</item>


    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="reporte_de_servicio_de_alto_riesgo_sar">Reporte de servicio de alto riesgo (SAR)</string>
    <string name="ingrese_los_datos_correspondientes">Ingrese los datos correspondientes</string>
    <string name="tipo_de_paciente">Tipo de paciente</string>
    <string name="hora_de_inicio">Hora de inicio</string>
    <string name="fecha">Fecha</string>
    <string name="lugar">Lugar</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="regresar">Regresar</string>
    <string name="add">add</string>
    <string name="analytics">Estadisticas</string>
    <string name="date">Fecha</string>
    <string name="entity">Entidad</string>
    <string name="no_implicated">Numero de implicados</string>
    <string name="accidente_de_tr_ncito">Accidente de transito</string>
    <string name="asalto_o_robo">Asalto/Robo</string>
    <string name="violencia_ofensa_sexual">Violencia/ofensa sexual</string>
    <string name="balacera">Balacera</string>
    <string name="secuestro">Secuestro</string>
    <string name="abuso_de_emblema">Abuso de emblema</string>
    <string name="arrestos_detonaciones">Arrestos/Detonaciones</string>
    <string name="agresi_n_personal">Agreción al personal</string>
    <string name="estorsi_n">Extorsión</string>
    <string name="amenaza">Amenaza</string>
    <string name="impedir_acceso_impedir_realizaci_n_de_acci_n">Impedir acceso realización de acción</string>
    <string name="agreci_n_a_instalaciones_y_o_vehiculos">Agreción a instalaciónes y o vehiculos</string>
    <string name="agresion_al_personal_de_la_cruz_roja_mexicana">Agresión al personal de la cruz roja mexicana</string>
    <string name="agreci_n_a_personas_transportadoras_evacuadas">Agreción a personas transportadoras evacuadas</string>
    <string name="agregar">Agregar</string>
    <string name="back">Atras</string>
    <string name="descripci_n_de_los_hechos">Descripción de los hechos</string>
    <string name="descripsi_n_y_causa_del_accidente">Descripsión y causa del accidente</string>
    <string name="tx_medico_y_estado_de_salud">Tx medico y estado de salud</string>
    <string name="tx_m_dico_y_estado_de_salud_actual">Tx médico y estado de salud actual</string>
    <string name="descripsi_n_de_da_os_a_terceros">Descripsión de daños a terceros</string>
    <string name="observaciones">Observaciones</string>
    <string name="policia_federal">Policia federal</string>
    <string name="policia_estatal">Policia estatal</string>
    <string name="policia_municipal">Policia municipal</string>
    <string name="marina_armada_de_mexico">Marina armada de Mexico</string>
    <string name="guardia_nacional">Guardia nacional</string>
    <string name="actores_de_la_violencia">Actores de la violencia</string>
    <string name="comunidades_miembros_de_la_comunidad">Comunidades / miembros de la comunidad</string>
    <string name="delincuencia_com_n">Delincuencia común</string>
    <string name="manifestante">Manifestante</string>
    <string name="detalles_de_los_bienes_crm_da_ados">Detalles de los bienes CRM dañados</string>
    <string name="complete_el_formulario">Complete el formulario</string>
    <string name="ejercito_mexicano">Ejercito Mexicano</string>
    <string name="otros">Otros</string>
    <string name="finalizar">Finalizar</string>
</resources>
