<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Ris1Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16sp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/text_date3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginBottom="16sp"/>

            <EditText
                android:id="@+id/edit_entity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/entity"
                android:autofillHints="2" />

            <Spinner
                android:id="@+id/spinner_delegation_ris1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_implicated"
                    android:textAlignment="textEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/piker_implicate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText,MissingConstraints" />

                <NumberPicker
                    android:id="@+id/piker_implicate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/check_traffic_accident"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/accidente_de_tr_ncito" />

                    <CheckBox
                        android:id="@+id/check_assault"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asalto_o_robo" />

                    <CheckBox
                        android:id="@+id/check_violence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/violencia_ofensa_sexual" />

                    <CheckBox
                        android:id="@+id/check_shooting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balacera" />

                    <CheckBox
                        android:id="@+id/check_kidnapping"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secuestro" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/check_emblem_abuse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abuso_de_emblema" />

                    <CheckBox
                        android:id="@+id/check_arrests"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrestos_detonaciones" />

                    <CheckBox
                        android:id="@+id/check_personalAssault"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agresi_n_personal" />

                    <CheckBox
                        android:id="@+id/check_extortion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estorsi_n" />

                    <CheckBox
                        android:id="@+id/check_threat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amenaza" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/check_prevent_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/impedir_acceso_impedir_realizaci_n_de_acci_n" />

            <CheckBox
                android:id="@+id/check_assault_on_facilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/agreci_n_a_instalaciones_y_o_vehiculos" />

            <CheckBox
                android:id="@+id/check_assault_on_staff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/agresion_al_personal_de_la_cruz_roja_mexicana" />

            <CheckBox
                android:id="@+id/check_aggression_to_transported"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/agreci_n_a_personas_transportadoras_evacuadas" />

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/piker_hour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_add1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar"/>

            <Button
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>