<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Ris2Fragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16sp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_el_formulario"
                style="@style/TextAppearance.AppCompat.Title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_hechos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripci_n_de_los_hechos" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_causa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripsi_n_y_causa_del_accidente" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tx_medico_y_estado_de_salud" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detalles_de_los_bienes_crm_da_ados" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_daños"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripsi_n_de_da_os_a_terceros" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_state_salud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tx_m_dico_y_estado_de_salud_actual" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="2000"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/observaciones" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/check_policia_federal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policia_federal" />

                    <CheckBox
                        android:id="@+id/check_policia_estatal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policia_estatal" />

                    <CheckBox
                        android:id="@+id/check_policia_municipal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/policia_municipal" />

                    <CheckBox
                        android:id="@+id/check_ejecito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercito_mexicano" />

                    <CheckBox
                        android:id="@+id/check_marina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marina_armada_de_mexico" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        android:id="@+id/check_guadia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guardia_nacional" />

                    <CheckBox
                        android:id="@+id/check_actores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actores_de_la_violencia" />

                    <CheckBox
                        android:id="@+id/check_manifestante"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/manifestante" />

                    <CheckBox
                        android:id="@+id/check_delincuencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delincuencia_com_n" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otros"
                        android:id="@+id/check_others"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <CheckBox
                android:id="@+id/check_comunidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comunidades_miembros_de_la_comunidad" />

            <Button
                android:id="@+id/button_add_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"/>

            <Button
                android:id="@+id/button_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finalizar"/>

            <Button
                android:id="@+id/button_back1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>